added download button

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,6 +33,7 @@ nav {
 .nav-title {
     font-weight: 800;
     font-size: 45px;
+    /* font-size: 50px; */
 }
 nav ul {
     display: flex;
@@ -128,3 +129,30 @@ section {
 }
 
 /* resume Styles */
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+    margin: 30px;
+    margin-bottom: 30px;
+}
+.resume .title {
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .sub-title {
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume .description {
+    color: #757575;
+}
+.resume-button {
+    margin-top: 50px;
+    text-align: center;
+}
